rabbitmq-manifest-qa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service-qa
  labels:
    app: rabbitmq
spec:
  type: ClusterIP  # Internal cluster communication only
  ports:
    - name: management
      port: 15672
      targetPort: 15672
      protocol: TCP
    - name: amqp
      port: 5672
      targetPort: 5672
      protocol: TCP
  selector:
    app: rabbitmq
